--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "mern",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -21,9 +21,10 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "mongoose": "^4.11.7"
+    "mongoose": "^4.11.7",
+    "react-native": "^0.56.0",
+    "react-router-dom": "^4.3.1"
   }
 }
