--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.15.4",
     "mongoose": "^4.11.7",
     "react-native": "^0.56.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-sticky-footer": "^0.1.0-rc3"
   }
 }
