--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "if-env": "^1.0.4",
     "mongoose": "^4.11.7",
     "react-native": "^0.56.0",
     "react-router-dom": "^4.3.1",
