--- a/package.json
+++ b/package.json
@@ -19,15 +19,13 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^1.11.0"
-  },
   "dependencies": {
     "body-parser": "^1.17.2",
     "concurrently": "^3.6.1",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
     "mongoose": "^4.11.7",
+    "nodemon": "^1.18.3",
     "react-native": "^0.56.0",
     "react-router-dom": "^4.3.1",
     "react-sticky-footer": "^0.1.0-rc3"
